fix(fuselage): word break in rcx-message-body (#1028)

--- a/packages/fuselage/src/components/Message/Messages.styles.scss
+++ b/packages/fuselage/src/components/Message/Messages.styles.scss
@@ -185,7 +185,7 @@ $message-background-color-highlight: functions.theme(
 
     transition: opacity 0.3s linear;
 
-    word-break: break-all;
+    word-break: break-word;
 
     opacity: 1;
 
